fixed pollbox overflow problem ... I guess I was overwriting the height later on in css

--- a/pollingo/src/css/main.css
+++ b/pollingo/src/css/main.css
@@ -235,8 +235,6 @@ body {
   grid-area: footer;
   border: 1px solid #473333;
   overflow: hidden;
-  height: 100%;
-  display: initial;
   background-color: #a1a1ff;
   box-sizing: border-box;
 }
@@ -254,7 +252,6 @@ body {
 
 .pollbox-1 .tabContainer {
   width: 100%;
-  height: 75px;
 }
 
 .pollbox-1 .tabContainer .buttonContainer {
